# UAV_Swarm_Control

./: README.md
control_law/: CMakeLists.txt  package.xml  test.launch
control_law/launch/: collision.launch  hummingbird.launch
control_law/src/: adapter.cpp  as_vectors.cpp  control_law_node.cpp  fleet.cpp  fleet_control.cpp  plotting.cpp  receive_as_vec.cpp
flocking_control/control_msgs/: CMakeLists.txt  package.xml
flocking_control/control_msgs/msg/: OdometryListMsg.msg
flocking_control/launch/: swarm_hummingbird.launch
flocking_control/log_data/: position_data_drone1.csv  position_data_drone2.csv  position_data_drone3.csv  position_data_drone4.csv  position_data_drone5.csv  position_data_drone6.csv
flocking_control/swarm_controller/: CMakeLists.txt  package.xml
flocking_control/swarm_controller/include/: swarm_controller_node.h
flocking_control/swarm_controller/param/: control_param.yaml
flocking_control/swarm_controller/src/: swarm_controller_node.cpp
flocking_control/swarm_information_pub/: CMakeLists.txt  package.xml
flocking_control/swarm_information_pub/src/: swarm_information_pub_node.cpp
flocking_control/trajectory_generator/: CMakeLists.txt  package.xml
flocking_control/trajectory_generator/param/: traj_param.yaml
flocking_control/trajectory_generator/src/: trajectory_generator_node.cpp
